Pushed image-text banner block

--- a/blocks/blackoffer-banner/vif/blackoffer-banner.css
+++ b/blocks/blackoffer-banner/vif/blackoffer-banner.css
@@ -1,3 +1,8 @@
+.blackoffer-banner-container {
+  margin-top: 0 !important;
+  padding-top: 0 !important;
+}
+
 .blackoffer-banner { 
   background-color: var(--color-neutral-black); 
   color: var(--color-neutral-50); 
