--- a/blocks/category-block/vif/category-block.css
+++ b/blocks/category-block/vif/category-block.css
@@ -1,3 +1,6 @@
+.category-block-wrapper {
+  margin-top: 30px !important;
+}
 .category-block {
   background-color: #fcf3f2;
   padding: var(--space-space-40) var(--space-space-20);
