--- a/blocks/twocolumn-offer-banner/vif/twocolumn-offer-banner.css
+++ b/blocks/twocolumn-offer-banner/vif/twocolumn-offer-banner.css
@@ -1,22 +1,30 @@
 .twocolumn-offer-banner {
   display: flex;
   justify-content: space-between;
+  align-items: stretch; /* Make sure all children have the same height */
 }
 
 .twocolumn-offer-banner-card {
   flex: 1;
   position: relative;
   text-align: center;
+  display: flex;
+  flex-direction: column; /* Make the card a flex container with column direction */
 }
 
 .twocolumn-offer-banner-card img {
   width: 100%;
-  height: auto;
+  height: auto; /* Ensure images do not distort the card height */
+  flex-shrink: 0;
+  height: 600px;
+  object-fit: cover;
+  object-position: top; /* Prevent images from shrinking */
 }
 
 .offer-details {
   padding: var(--space-space-2x);
   font-family: var(--font-family-body, "Calibre 2");
+  flex-grow: 1; /* Make offer-details take up remaining space */
 }
 
 .offer-details h6 {
