--- a/blocks/video-banner/vif/video-banner.css
+++ b/blocks/video-banner/vif/video-banner.css
@@ -1,5 +1,7 @@
 .video-banner-container {
   padding-bottom: 0 !important;
+  width: 75% !important;
+  margin: auto;
 }
 
 .video-banner-wrapper {
@@ -9,6 +11,7 @@
   justify-content: center;
   align-items: center;
   background-color: #ffffff;
+
 }
 
 .video-banner {
