--- a/blocks/twocolumn-offer-banner/vif/twocolumn-offer-banner.css
+++ b/blocks/twocolumn-offer-banner/vif/twocolumn-offer-banner.css
@@ -1,3 +1,8 @@
+
+.twocolumn-offer-banner-wrapper {
+  margin-top: 30px !important;
+}
+
 .twocolumn-offer-banner {
   display: flex;
   justify-content: space-between;
