Improved Font styles

--- a/blocks/blackoffer-banner/vif/blackoffer-banner.css
+++ b/blocks/blackoffer-banner/vif/blackoffer-banner.css
@@ -1,5 +1,5 @@
-.blackoffer-banner-container {
-  margin-top: 0 !important;
+.blackoffer-banner-wrapper {
+  margin: 15px 0 20px 0 !important;
   padding-top: 0 !important;
 }
 
